cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesinvalid-pattern-operator.yaml/results.txt
Configuration is invalid - found 1 configuration error(s), and 0 rule(s).
[ERROR] Rule parse error in rule eqeq:
 Expected one of pattern,all,any,regex,taint,not,inside,anywhere to be present
  --> rules/invalid-rules/invalid-pattern-operator.yaml:4
   2 | - id: eqeq
   3 |   match:
   4 |     foo: bar
     |     ^
   5 |   message: Useless comparison
   6 |   languages: [py]
